# humanoid

./: .gitignore  .main.cpp.swp  CMakeLists.txt  README.md  test.ipynb
boostPython/src/: CMakelists.txt
boostPython/src/hello-world/: CMakelists.txt  test.cpp
build-xcode/: CMakeCache.txt  cmake_install.cmake
build-xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
build-xcode/geometry/: cmake_install.cmake
build-xcode/geometry/src/: cmake_install.cmake
build-xcode/humanoidTester.build/Debug/ALL_BUILD.build/: Script-D99976EDF4D14D73B069FFC6.sh  dgph  dgph~
build-xcode/humanoidTester.build/Debug/ZERO_CHECK.build/: Script-4B75D054A58F451D94B0FF0D.sh  dgph  dgph~
build-xcode/humanoidTester.xcodeproj/: project.pbxproj
build-xcode/humanoidTester.xcodeproj/project.xcworkspace/xcuserdata/dongdong.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/humanoidTester.xcodeproj/xcuserdata/dongdong.xcuserdatad/xcschemes/: xcschememanagement.plist
build-xcode/src/: cmake_install.cmake
build-xcode/src/Debug/: tester
geometry/include/: shape.h
geometry/src/: CMakeLists.txt  rectangle.cpp  triangle.cpp
meshes/: arm_l_elbow.STL  arm_l_shou_p.STL  arm_l_shou_r.STL  arm_r_elbow.STL  arm_r_shou_p.STL  arm_r_shou_r.STL  head_p.STL  head_t.STL  leg_l_ankle_p.STL  leg_l_hip_p.STL  leg_l_hip_r.STL  leg_l_knee.STL  leg_r_ankle_r.STL  leg_r_hip_y.STL  torso.STL
src/: CMakeLists.txt  main.cpp
test/: Untitled.ipynb  test.py
urdf/: humanoid.urdf
(+11 files in other folders)
